# Advent-of-Code-2025

./: .gitignore  Cargo.toml  README.md
day01/: solution.py
src/Day 1/: main.rs
src/Day 10/: main.rs
src/Day 11/: main.rs
src/Day 2/: main.rs
src/Day 3/: main.rs
src/Day 4/: main.rs
src/Day 5/: main.rs
src/Day 6/: main.rs
src/Day 7/: main.rs
src/Day 8/: main.rs  point_3d.rs  union_find.rs
src/Day 9/: main.rs  point.rs
