[package]
name = "Advent-of-Code-2025"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units for better optimization

[dependencies]

[[bin]]
name = "day1"
path = "src/Day 1/main.rs"

[[bin]]
name = "day2"
path = "src/Day 2/main.rs"

[[bin]]
name = "day3"
path = "src/Day 3/main.rs"
